--- a/index.html
+++ b/index.html
@@ -67,10 +67,9 @@
       <div class="video-tabs video-tabs-dynamic">
         <ul class="video-tabs tab-menu">
           <li><a href="#" class="active" data-tab="bandoneon" data-i18n-key="tabs.bandoneon">Bandoneón</a></li>
-          <li><a href="#" data-tab="bach" data-i18n-key="tabs.bach">Bach</a></li>
+          <li><a href="#" data-tab="experimentos" data-i18n-key="tabs.experimentos">Experimentos</a></li>
           <li><a href="#" data-tab="patio" data-i18n-key="tabs.patio">Patio</a></li>
-          <li><a href="#" data-tab="dsq" data-i18n-key="tabs.dsq">DSQ</a></li>
-          <li><a href="#" data-tab="piano" data-i18n-key="tabs.piano">Obras/juegos/piano</a></li>
+          <li><a href="#" data-tab="dsq" data-i18n-key="tabs.dsq">DSQ</a></li>          
         </ul>
       </div>
 
@@ -151,10 +150,8 @@
               allowfullscreen loading="lazy"></iframe>
             <h4 data-i18n-key="videos.bandoneon.15">Arreglo de Máximo Mori.</h4>
           </div>
-        </div>
 
-        <div class="tab-pane" id="bach">
-          <div class="video">
+            <div class="video">
             <iframe class="lazy-video" data-src="https://www.youtube.com/embed/Z65BS4V5QS0" frameborder="0"
               allowfullscreen loading="lazy"></iframe>
             <h4 data-i18n-key="videos.bach.1">Invención 8 a dos voces de Bach</h4>
@@ -169,20 +166,79 @@
               allowfullscreen loading="lazy"></iframe>
             <h4 data-i18n-key="videos.bach.3">Varias piezas del libro de Ana Magdalena Bach</h4>
           </div>
+        </div>
+
+        <div class="tab-pane" id="experimentos">
+
+          <div class="video">
+            <iframe class="lazy-video" data-src="https://www.youtube.com/embed/NK-2FgAzlVs" frameborder="0"
+              allowfullscreen loading="lazy"></iframe>
+            <h4 data-i18n-key="videos.experimentos.1">Composición vocal a 20 voces</h4>
+          </div>
+          <div class="video">
+            <iframe class="lazy-video" data-src="https://www.youtube.com/embed/8o278V1rhOQ" frameborder="0"
+              allowfullscreen loading="lazy"></iframe>
+            <h4 data-i18n-key="videos.experimentos.2">Cuarteto de cuerdas grabado por Santiago Segret</h4>
+          </div>
+          <div class="video">
+            <iframe class="lazy-video" data-src="https://www.youtube.com/embed/-oRJ49h56EY" frameborder="0"
+              allowfullscreen loading="lazy"></iframe>
+            <h4 data-i18n-key="videos.experimentos.3">Libro de Bucles</h4>
+          </div>
+          <div class="video">
+            <iframe class="lazy-video" data-src="https://www.youtube.com/embed/aadUatZ6gTQ" frameborder="0"
+              allowfullscreen loading="lazy"></iframe>
+            <h4 data-i18n-key="videos.experimentos.4">Una obra musical casera</h4>
+          </div>
+          <div class="video">
+            <iframe class="lazy-video" data-src="https://www.youtube.com/embed/3ALR8Dw1JH8" frameborder="0"
+              allowfullscreen loading="lazy"></iframe>
+            <h4 data-i18n-key="videos.experimentos.5">Sonata para piano realizada para la carrera de composición en la UNA.</h4>
+          </div>
+          <div class="video">
+            <iframe class="lazy-video" data-src="https://www.youtube.com/embed/3iCsWEcug30" frameborder="0"
+              allowfullscreen loading="lazy"></iframe>
+            <h4 data-i18n-key="videos.experimentos.6">Cuarteto de cuerdas con bandoneón.</h4>
+          </div>
+          <div class="video">
+            <iframe class="lazy-video" data-src="https://www.youtube.com/embed/J6rFnzN9lxs" frameborder="0"
+              allowfullscreen loading="lazy"></iframe>
+            <h4 data-i18n-key="videos.experimentos.7">Una canción mía para piano</h4>
+          </div>
+          <div class="video">
+            <iframe class="lazy-video" data-src="https://www.youtube.com/embed/_L_2JOsCIt0" frameborder="0"
+              allowfullscreen loading="lazy"></iframe>
+            <h4 data-i18n-key="videos.experimentos.8">Estudiando Thelonious Monk</h4>
+          </div>
+          <div class="video">
+            <iframe class="lazy-video" data-src="https://www.youtube.com/embed/ImYLetudYfw" frameborder="0"
+              allowfullscreen loading="lazy"></iframe>
+            <h4 data-i18n-key="videos.experimentos.9">Preludio 16 de Chopin</h4>
+          </div>
+          <div class="video">
+            <iframe class="lazy-video" data-src="https://www.youtube.com/embed/grZuM4Rws8E" frameborder="0"
+              allowfullscreen loading="lazy"></iframe>
+            <h4 data-i18n-key="videos.experimentos.10">El estudio 1 de Chopin</h4>
+          </div>
+          <div class="video">
+            <iframe class="lazy-video" data-src="https://www.youtube.com/embed/hn21pz3IN2g" frameborder="0"
+              allowfullscreen loading="lazy"></iframe>
+            <h4 data-i18n-key="videos.experimentos.11">El preludio 3 de Chopin</h4>
+          </div>
           <div class="video">
             <iframe class="lazy-video" data-src="https://www.youtube.com/embed/MalSKAOZvwg" frameborder="0"
               allowfullscreen loading="lazy"></iframe>
-            <h4 data-i18n-key="videos.bach.4">Tocando el piano</h4>
+            <h4 data-i18n-key="videos.experimentos.12">Tocando el piano</h4>
           </div>
           <div class="video">
             <iframe class="lazy-video" data-src="https://www.youtube.com/embed/MfuFe6EvJe0" frameborder="0"
               allowfullscreen loading="lazy"></iframe>
-            <h4 data-i18n-key="videos.bach.5">Grabado en Panamá</h4>
+            <h4 data-i18n-key="videos.experimentos.13">Grabado en Panamá</h4>
           </div>
           <div class="video">
             <iframe class="lazy-video" data-src="https://www.youtube.com/embed/5RfQyTuEEtU" frameborder="0"
               allowfullscreen loading="lazy"></iframe>
-            <h4 data-i18n-key="videos.bach.6">Uno de los 4 duettos del maestro Bach en piano.</h4>
+            <h4 data-i18n-key="videos.experimentos.14">Uno de los 4 duettos del maestro Bach en piano.</h4>
           </div>
         </div>
 
@@ -232,63 +288,7 @@
           </div>
         </div>
 
-        <div class="tab-pane" id="piano">
-          <div class="video">
-            <iframe class="lazy-video" data-src="https://www.youtube.com/embed/NK-2FgAzlVs" frameborder="0"
-              allowfullscreen loading="lazy"></iframe>
-            <h4 data-i18n-key="videos.piano.1">Composición vocal a 20 voces</h4>
-          </div>
-          <div class="video">
-            <iframe class="lazy-video" data-src="https://www.youtube.com/embed/8o278V1rhOQ" frameborder="0"
-              allowfullscreen loading="lazy"></iframe>
-            <h4 data-i18n-key="videos.piano.2">Cuarteto de cuerdas grabado por Santiago Segret</h4>
-          </div>
-          <div class="video">
-            <iframe class="lazy-video" data-src="https://www.youtube.com/embed/-oRJ49h56EY" frameborder="0"
-              allowfullscreen loading="lazy"></iframe>
-            <h4 data-i18n-key="videos.piano.3">Libro de Bucles</h4>
-          </div>
-          <div class="video">
-            <iframe class="lazy-video" data-src="https://www.youtube.com/embed/aadUatZ6gTQ" frameborder="0"
-              allowfullscreen loading="lazy"></iframe>
-            <h4 data-i18n-key="videos.piano.4">Una obra musical casera</h4>
-          </div>
-          <div class="video">
-            <iframe class="lazy-video" data-src="https://www.youtube.com/embed/3ALR8Dw1JH8" frameborder="0"
-              allowfullscreen loading="lazy"></iframe>
-            <h4 data-i18n-key="videos.piano.5">Sonata para piano realizada para la carrera de composición en la UNA.</h4>
-          </div>
-          <div class="video">
-            <iframe class="lazy-video" data-src="https://www.youtube.com/embed/3iCsWEcug30" frameborder="0"
-              allowfullscreen loading="lazy"></iframe>
-            <h4 data-i18n-key="videos.piano.6">Cuarteto de cuerdas con bandoneón.</h4>
-          </div>
-          <div class="video">
-            <iframe class="lazy-video" data-src="https://www.youtube.com/embed/J6rFnzN9lxs" frameborder="0"
-              allowfullscreen loading="lazy"></iframe>
-            <h4 data-i18n-key="videos.piano.7">Una canción mía para piano</h4>
-          </div>
-          <div class="video">
-            <iframe class="lazy-video" data-src="https://www.youtube.com/embed/_L_2JOsCIt0" frameborder="0"
-              allowfullscreen loading="lazy"></iframe>
-            <h4 data-i18n-key="videos.piano.9">Estudiando Thelonious Monk</h4>
-          </div>
-          <div class="video">
-            <iframe class="lazy-video" data-src="https://www.youtube.com/embed/ImYLetudYfw" frameborder="0"
-              allowfullscreen loading="lazy"></iframe>
-            <h4 data-i18n-key="videos.piano.10">Preludio 16 de Chopin</h4>
-          </div>
-          <div class="video">
-            <iframe class="lazy-video" data-src="https://www.youtube.com/embed/grZuM4Rws8E" frameborder="0"
-              allowfullscreen loading="lazy"></iframe>
-            <h4 data-i18n-key="videos.piano.11">El estudio 1 de Chopin</h4>
-          </div>
-          <div class="video">
-            <iframe class="lazy-video" data-src="https://www.youtube.com/embed/hn21pz3IN2g" frameborder="0"
-              allowfullscreen loading="lazy"></iframe>
-            <h4 data-i18n-key="videos.piano.12">El preludio 3 de Chopin</h4>
-          </div>
-        </div>
+        
       </div>
     </section>
 
