--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <meta name="twitter:image" content="/santiagosegretFOTOS/01_Fotos/Federico-Cabarcos-Santiago.jpg">
 </head>
 
-<body>
+<body class="theme-dark" data-theme="dark">
   <a class="skip-link" href="#inicio" data-i18n-key="skip.toContent">Saltar al contenido</a>
 
   <nav class="navbar" role="navigation">
