--- a/index.html
+++ b/index.html
@@ -64,16 +64,7 @@
 
       <div class="video-background">
         <div class="video-mask-container">
-          <video class="hero-video" controls autoplay loop playsinline preload="metadata"
-            poster="santiagosegretFOTOS/02_Fotos/_MG_2076.jpg" disablepictureinpicture disableremoteplayback
-            controlsList="nodownload nofullscreen noremoteplayback">
-            <source src="GOLONDRINAS_PUBLICAR.mp4" type="video/mp4">
-            <span data-i18n-key="hero.videoFallback">Tu navegador no soporta el elemento de video. Podés descargar el archivo desde el servidor.</span>
-          </video>
-          <button id="unmute-overlay" class="unmute-overlay" aria-label="Activar sonido">
-            <span class="unmute-icon">🔇</span>
-            <span class="unmute-text" data-i18n-key="hero.unmute">Activar sonido</span>
-          </button>
+          <img src="santiagosegretFOTOS/01_Fotos/DSC_6923.Carboni-2024-foto Carlos Furman.jpg" alt="Santiago Segret" class="hero-image" data-i18n-key="hero.imageAlt">
         </div>
       </div>
 
@@ -112,7 +103,7 @@
             <h4 data-i18n-key="videos.bandoneon.3">El arreglo es de Máximo Mori y la referencia inevitable es Roberto Di Filippo.</h4>
           </div>
           <div class="video">
-            <iframe class="lazy-video" data-src="https://www.youtube.com/embed/nMwCvczszyI"
+            <iframe class="lazy-video" data-src="https://www.youtube.com/embed/hY04Maap_Nw"
               frameborder="0" allowfullscreen loading="lazy"></iframe>
             <h4 data-i18n-key="videos.bandoneon.4">Uno de los tantos y grandes arreglos de Néstor Marconi.</h4>
           </div>
@@ -191,7 +182,7 @@
 
         <div class="tab-pane" id="busquedas">
           <p class="video-tab-description" data-i18n-key="videos.busquedas.description">
-            Búsquedas personales, composiciones y pruebas en distintos formatos e instrumentos.
+            Búsquedas personales, composiciones y experimentos en distintos formatos e instrumentos.
           </p>
           <div class="video">
             <iframe class="lazy-video" data-src="https://www.youtube.com/embed/NK-2FgAzlVs" frameborder="0"
@@ -204,64 +195,69 @@
             <h4 data-i18n-key="videos.busquedas.2">Cuarteto de cuerdas grabado por Santiago Segret</h4>
           </div>
           <div class="video">
+            <iframe class="lazy-video" data-src="https://www.youtube.com/embed/Fjlj-Iq-C-0" frameborder="0"
+              allowfullscreen loading="lazy"></iframe>
+            <h4 data-i18n-key="videos.busquedas.3">Fragmento de libro de Bucles.</h4>
+          </div>  
+          <div class="video">
             <iframe class="lazy-video" data-src="https://www.youtube.com/embed/-oRJ49h56EY" frameborder="0"
               allowfullscreen loading="lazy"></iframe>
-            <h4 data-i18n-key="videos.busquedas.3">Libro de Bucles</h4>
+            <h4 data-i18n-key="videos.busquedas.4">Libro de Bucles</h4>
           </div>
           <div class="video">
             <iframe class="lazy-video" data-src="https://www.youtube.com/embed/aadUatZ6gTQ" frameborder="0"
               allowfullscreen loading="lazy"></iframe>
-            <h4 data-i18n-key="videos.busquedas.4">Una obra musical casera</h4>
-          </div>
+            <h4 data-i18n-key="videos.busquedas.5">Una obra musical casera</h4>
+          </div>            
           <div class="video">
             <iframe class="lazy-video" data-src="https://www.youtube.com/embed/3ALR8Dw1JH8" frameborder="0"
               allowfullscreen loading="lazy"></iframe>
-            <h4 data-i18n-key="videos.busquedas.5">Sonata para piano realizada para la carrera de composición en la UNA.</h4>
-          </div>
+            <h4 data-i18n-key="videos.busquedas.6">Sonata para piano realizada para la carrera de composición en la UNA.</h4>
+          </div>          
           <div class="video">
             <iframe class="lazy-video" data-src="https://www.youtube.com/embed/3iCsWEcug30" frameborder="0"
               allowfullscreen loading="lazy"></iframe>
-            <h4 data-i18n-key="videos.busquedas.6">Cuarteto de cuerdas con bandoneón.</h4>
-          </div>
+            <h4 data-i18n-key="videos.busquedas.7">Cuarteto de cuerdas con bandoneón.</h4>
+          </div>                             
           <div class="video">
             <iframe class="lazy-video" data-src="https://www.youtube.com/embed/J6rFnzN9lxs" frameborder="0"
               allowfullscreen loading="lazy"></iframe>
-            <h4 data-i18n-key="videos.busquedas.7">Una canción mía para piano</h4>
+            <h4 data-i18n-key="videos.busquedas.8">Una canción mía para piano</h4>
           </div>
           <div class="video">
             <iframe class="lazy-video" data-src="https://www.youtube.com/embed/_L_2JOsCIt0" frameborder="0"
               allowfullscreen loading="lazy"></iframe>
-            <h4 data-i18n-key="videos.busquedas.8">Estudiando Thelonious Monk</h4>
+            <h4 data-i18n-key="videos.busquedas.9">Estudiando Thelonious Monk</h4>
           </div>
           <div class="video">
             <iframe class="lazy-video" data-src="https://www.youtube.com/embed/ImYLetudYfw" frameborder="0"
               allowfullscreen loading="lazy"></iframe>
-            <h4 data-i18n-key="videos.busquedas.9">Preludio 16 de Chopin</h4>
+            <h4 data-i18n-key="videos.busquedas.10">Preludio 16 de Chopin</h4>
           </div>
           <div class="video">
             <iframe class="lazy-video" data-src="https://www.youtube.com/embed/grZuM4Rws8E" frameborder="0"
               allowfullscreen loading="lazy"></iframe>
-            <h4 data-i18n-key="videos.busquedas.10">El estudio 1 de Chopin</h4>
+            <h4 data-i18n-key="videos.busquedas.11">El estudio 1 de Chopin</h4>
           </div>
           <div class="video">
             <iframe class="lazy-video" data-src="https://www.youtube.com/embed/hn21pz3IN2g" frameborder="0"
               allowfullscreen loading="lazy"></iframe>
-            <h4 data-i18n-key="videos.busquedas.11">El preludio 3 de Chopin</h4>
+            <h4 data-i18n-key="videos.busquedas.12">El preludio 3 de Chopin</h4>
           </div>
           <div class="video">
             <iframe class="lazy-video" data-src="https://www.youtube.com/embed/MalSKAOZvwg" frameborder="0"
               allowfullscreen loading="lazy"></iframe>
-            <h4 data-i18n-key="videos.busquedas.12">Tocando el piano</h4>
+            <h4 data-i18n-key="videos.busquedas.13">Tocando el piano</h4>
           </div>
           <div class="video">
             <iframe class="lazy-video" data-src="https://www.youtube.com/embed/MfuFe6EvJe0" frameborder="0"
               allowfullscreen loading="lazy"></iframe>
-            <h4 data-i18n-key="videos.busquedas.13">Grabado en Panamá</h4>
+            <h4 data-i18n-key="videos.busquedas.14">Grabado en Panamá</h4>
           </div>
           <div class="video">
             <iframe class="lazy-video" data-src="https://www.youtube.com/embed/5RfQyTuEEtU" frameborder="0"
               allowfullscreen loading="lazy"></iframe>
-            <h4 data-i18n-key="videos.busquedas.14">Uno de los 4 duettos del maestro Bach en piano.</h4>
+            <h4 data-i18n-key="videos.busquedas.15">Uno de los 4 duettos del maestro Bach en piano.</h4>
           </div>
         </div>
 
@@ -388,21 +384,13 @@
             <div class="logro-item with-media">
               <div class="logro-content">
                 <p class="logro-detalle" data-i18n-key="bio.training.item3">En 2019 se gradúa con el título de <strong>Licenciado en Artes Musicales con Orientación en Composición en la UNA</strong>.</p>
-              </div>
-              <div class="logro-media-container">
-                <iframe class="lazy-video" data-src="https://www.youtube.com/embed/Fjlj-Iq-C-0" frameborder="0" allowfullscreen></iframe>
-                <div class="logro-media-caption" data-i18n-key="bio.training.caption2">"Fragmento de tesina de graduación"</div>
-              </div>
+              </div>              
             </div>
 
             <div class="logro-item with-media">
               <div class="logro-content">
                 <p class="logro-detalle" data-i18n-key="bio.training.item1">En 2005 realizó el programa de la <strong>Orquesta Escuela de Tango Emilio Balcarce</strong>, junto a grandes maestros como Victor Lavallén, Raúl Garello, Lidia Borda, José Colángelo y Néstor Marconi.</p>
-              </div>
-              <div class="logro-media-container">
-                <img src="santiagosegretFOTOS/01_Fotos/con emilio balcarce en el panteón de roma.jpg" alt="Foto con Emilio" class="expandable-photo" loading="lazy" style="cursor: pointer;">
-                <div class="logro-media-caption" data-i18n-key="bio.training.caption1">Con Emilio Balcarce</div>
-              </div>
+              </div>              
             </div>
 
             <div class="logro-item">
@@ -420,11 +408,7 @@
             <div class="logro-item with-media">
               <div class="logro-content">
                 <p class="logro-detalle" data-i18n-key="bio.training.item4">De 2013 a 2015 integró la <strong>Orquesta del Tango de la Ciudad de Buenos Aires</strong> dirigida en aquel entonces por Raúl Garello, Néstor Marconi y Carlos Cuacci.</p>
-              </div>
-              <div class="logro-media-container">
-                <iframe class="lazy-video" data-src="https://www.youtube.com/embed/ULfJkO40yQA" frameborder="0" allowfullscreen></iframe>
-                <div class="logro-media-caption" data-i18n-key="bio.training.caption3">En la Usina del Arte</div>
-              </div>
+              </div>              
             </div>            
 
             <div class="logro-item">
