--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
           <div class="video">
             <iframe class="lazy-video" data-src="https://www.youtube.com/embed/pMLhlzzbGvo" frameborder="0"
               allowfullscreen loading="lazy"></iframe>
-            <h4 data-i18n-key="videos.patio.2">Con Patio y Nadia Larsher</h4>
+            <h4 data-i18n-key="videos.patio.2">Con Patio y Nadia Larcher</h4>
           </div>
           <div class="video">
             <iframe class="lazy-video" data-src="https://www.youtube.com/embed/aVH4zURsmiI" frameborder="0"
@@ -371,22 +371,22 @@
               <p class="logro-detalle" data-i18n-key="bio.training.item3">En 2019 se gradúa con el título de <strong>Licenciado en Artes Musicales con Orientación en Composición en la UNA (Universidad Nacional de las Artes)</strong>.</p>
             </div>
             <div class="logro-item">
-              <p class="logro-detalle" data-i18n-key="bio.training.item1">En 2005 realizó el programa de la <strong>Orquesta Escuela de Tango Emilio Balcarce</strong>, junto a grandes maestros como Victor Lavallén, Raúl Garello, Lidia Borda, José Colángelo y Néstor Marconi.</p>
+              <p class="logro-detalle" data-i18n-key="bio.training.item1">En 2006 completó programa de la <strong>Orquesta Escuela de Tango Emilio Balcarce</strong>, junto a grandes maestros como Victor Lavallén, Raúl Garello, Lidia Borda, José Colángelo, Néstor Marconi y el mismo Emilio Balcarce.</p>
             </div>
             <div class="logro-item">
-              <p class="logro-detalle" data-i18n-key="bio.training.item6">A lo largo de su adolescencia y hacia la juventud estudió bandoneón con: <strong>Pablo Mainetti, Julio Pane, Mariano "Paya" Cigna, Federico Pereiro y con Carlos Lazzari</strong> a los 18 años.</p>
+              <p class="logro-detalle" data-i18n-key="bio.training.item6">A lo largo de su adolescencia y hacia la juventud estudió bandoneón con: <strong>Julio Pane, Mariano "Paya" Cigna, Federico Pereiro y con Carlos Lazzari</strong></p>
             </div>
             <div class="logro-item">
               <p class="logro-detalle" data-i18n-key="bio.training.item4">De 2013 a 2015 integró la <strong>Orquesta del Tango de la Ciudad de Buenos Aires</strong> dirigida en aquel entonces por Raúl Garello, Néstor Marconi y Carlos Cuacci.</p>
             </div>
             <div class="logro-item">
-              <p class="logro-detalle" data-i18n-key="bio.training.item2">También compartió grabaciones y escenarios con Leopoldo Federico, Raúl Garello, Victor Lavallén, Vitillo Ábalos, Hilda Herrera, Stefano Bollani, Susana Rinaldi, Nadia Larcher, Luna Monti, Naty Peluso, Pablo Estigarribia, Amelita Baltar, Jorge Fandermole, Rafaél Villazón, Nacho Vidal, Marcelo Moguilevsky, Hernán Segret, Victor Villadangos, Mariana Rewersky, Guillermo Rubino, Ismael Grossman, Juan Pablo Navarro, Mono Fontana.</p>
+              <p class="logro-detalle" data-i18n-key="bio.training.item2">Compartió grabaciones y escenarios con Leopoldo Federico, Raúl Garello, Victor Lavallén, Vitillo Ábalos, Hilda Herrera, Stefano Bollani, Susana Rinaldi, Nadia Larcher, Luna Monti, Nathy Peluso, Pablo Estigarribia, Amelita Baltar, Jorge Fandermole, Rafael Villazón, Nacho Vidal, Marcelo Moguilevsky, Hernán Segret, Victor Villadangos, Mariana Rewersky, Guillermo Rubino, Ismael Grossman, Juan Pablo Navarro, Mono Fontana.</p>
             </div>
             <div class="logro-item">
-              <p class="logro-detalle" data-i18n-key="bio.training.item5">Cursó el programa educativo llevado adelante por Hilda Herrera llamado <strong>CIMAP</strong>: Creadores e Intérpretes de Música Argentina en Piano.</p>
+              <p class="logro-detalle" data-i18n-key="bio.training.item5">Cursó el programa del <strong>CIMAP dirigido por Hilda Herrera</strong>: Creadores e Intérpretes de Música Argentina en Piano.</p>
             </div>
             <div class="logro-item">
-              <p class="logro-detalle" data-i18n-key="bio.training.item7">En esos años viajó a más de 20 países con la Orquesta Escuela de Tango, la Orquesta de Érica Di Salvo, Diego Schissi Quinteto, trío Patio y otros.</p>
+              <p class="logro-detalle" data-i18n-key="bio.training.item7">Viajó a más de 20 países con la Orquesta Escuela de Tango, Diego Schissi Quinteto, trío Patio, la Orquesta de Érica Di Salvo, y otros.</p>
             </div>
           </div>
         </div>
@@ -572,8 +572,8 @@
           <p data-i18n-key="photos.20.caption">Con el Mono Fontana.</p>
         </div>
         <div class="foto">
-          <img src="santiagosegretFOTOS/01_Fotos/quinteto de schissi más bolani.jpg" alt="Quinteto de Schissi y Bolani" loading="lazy" data-i18n-key="photos.22.alt" data-i18n-attr="alt">
-          <p data-i18n-key="photos.22.caption">Quinteto de Schissi con Bolani.</p>
+          <img src="santiagosegretFOTOS/01_Fotos/quinteto de schissi más bolani.jpg" alt="Quinteto de Schissi y Bollani" loading="lazy" data-i18n-key="photos.22.alt" data-i18n-attr="alt">
+          <p data-i18n-key="photos.22.caption">Quinteto de Schissi con Bollani.</p>
         </div>       
       
         <div class="foto">
