--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
   <a class="skip-link" href="#inicio" data-i18n-key="skip.toContent">Saltar al contenido</a>
 
   <nav class="navbar" role="navigation">
+    <button class="hamburger-btn" aria-label="Abrir menú" aria-expanded="false">
+      <span></span>
+      <span></span>
+      <span></span>
+    </button>
     <ul class="navbar-tabs">
       <li><a href="#inicio" data-i18n-key="nav.home">Inicio</a></li>
       <li><a href="#videos" data-i18n-key="nav.videos">Videos</a></li>
