--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <!-- Sección Inicio -->
     <section class="seccion" id="inicio">
       <div class="hero-title-cool">
-        <span class="hero-title-name">Santiago Segret</span>
+        <h1 class="hero-title-name">Santiago Segret</h1>
         <br>
   <span class="hero-title-sub" data-i18n-key="hero.subtitle">músico, bandoneonista</span>
       </div>
